add HTML elements: DOCTYPE, head, title, body

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,13 +1,23 @@
-<h1>My First Webpage</h2>
-  <h2> Chris Kemly's webpage</h2>
-<p> This is my first webpade </p>
-<p> The best webpage</p>
 
-<p> Here are some things I'm going to learn about coding:</p>
-<ol>
-  <li>Terminal</li>
-  <li>Git and Github</li>
-  <li>CSS and HTML/li>
-  <li>Python</li>
-  <li>Javascript</li>
-</ol>
+<!doctype HTML>
+<html>
+  <body>
+    <head>
+      <title>Webpage #1</title>
+    </head>
+    <h1>My First Webpage</h2>
+      <h2> Chris Kemly's webpage</h2>
+    <p> This is my first webpade </p>
+    <p> The best webpage</p>
+
+    <p> Here are some things I'm going to learn about coding:</p>
+    <ul>
+      <li>Terminal</li>
+      <li>Git and Github</li>
+      <li>CSS and HTML/li>
+      <li>Python</li>
+      <li>Javascript</li>
+    </ul>
+
+  </body>
+</html>
