add links and images to webpage

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -7,13 +7,14 @@
     </head>
     <h1>My First Webpage</h2>
       <h2> Chris Kemly's webpage</h2>
-    <p> This is my first webpade </p>
-    <p> The best webpage</p>
-
-    <p> Here are some things I'm going to learn about coding:</p>
+    <p> This is <strong>my first webpage </strong></p>
+    <p> Here is a picture of me riding my cat, Alicia</p>
+    <p><img src=img/AliciaRide.jpeg alt="Chris and Kate riding a cat 
+      named Alicia Keys"</p>
+    <p> Here are some things I'm going to learn about <em>coding:</em></p>
     <ul>
       <li>Terminal</li>
-      <li>Git and Github</li>
+      <li>Git and <a href="https://github.com/"> Github</a></li>
       <li>CSS and HTML/li>
       <li>Python</li>
       <li>Javascript</li>
